.getVar() works only with searchList value

--- a/templates/book_detail.tmpl
+++ b/templates/book_detail.tmpl
@@ -67,7 +67,7 @@ $book_info[2]
     </tr>
     <tr>
         <td>引文数量</td>
-        <td><input name="citeNum" class="form-control" data-id="$book_info[0]" value="$getVar('book_info[9]', '0')"></td>
+        <td><input name="citeNum" class="form-control" data-id="$book_info[0]" value="$book_info[9]"></td>
     </tr>
 </table>
 <iframe class="detail-iframe" src="/html_data/$cite_file"></iframe>
