不输入也可跳转

--- a/templates/base_layout.tmpl
+++ b/templates/base_layout.tmpl
@@ -6,6 +6,7 @@
 <html>
 <head>
     <title>$title</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
     <script src="http://s0.qhimg.com/lib/jquery/190.js"></script>
     <style type="text/css">
