--- a/templates/books_list.tmpl
+++ b/templates/books_list.tmpl
@@ -64,7 +64,7 @@ tr td:first-child{
             页
 
             #if $next_page
-            <a href="/list/$next_page?type=$type">上一页</a>
+            <a href="/list/$next_page?type=$type">下一页</a>
             #end if
         </td>
     </tr>
